@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-29T16:26:10Z",
-  "count_outdated" : 130,
-  "uniques_outdated" : 90,
+  "timestamp" : "2022-04-30T08:20:42Z",
+  "count_outdated" : 133,
+  "uniques_outdated" : 92,
   "count" : 146,
   "uniques" : 99,
   "clones" : [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 4,
