@@ -1,12 +1,7 @@
 {
-  "count": 16,
-  "uniques": 6,
+  "count": 13,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 4,
