@@ -1,3 +1,9 @@
+2022-04-30T08:20:42Z:
+* notice: last 14d: all unq: 13 5
+* notice: prev accum: outdated-all outdated-unq / all unq: 130 90 / 146 99
+* notice: next accum: outdated-all outdated-unq / all unq: 133 92 / 146 99
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-29T16:26:10Z:
 * notice: last 14d: all unq: 16 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 126 87 / 146 99
